changed hyperlink color to address contrast issue.

--- a/project/styles/sushi-styles.css
+++ b/project/styles/sushi-styles.css
@@ -129,6 +129,17 @@ header {
   color: #ffffff;
 }
 
+a {
+    color: #ffffff;
+    font-size: 1.5rem;
+    text-decoration: none;
+}
+
+a:hover, a:focus {
+    color: #ffffff;
+    text-decoration: underline;
+}
+
 footer {
         display: flex;
         flex-direction: column;
